--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.804.0",
+    "@aws-sdk/s3-request-presigner": "^3.804.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -28,6 +30,7 @@
     "@prisma/client": "^6.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
